Esper pygame example input and move update

--- a/pygames/esper/esper_example.ipynb
+++ b/pygames/esper/esper_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -38,33 +38,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pygame\n",
     "import esper\n",
+    "import pygame\n",
     "\n",
     "FPS = 60\n",
     "RESOLUTION = 640, 480\n",
+    "MOVEMENT_SPEED = 3\n",
+    "\n",
     "\n",
     "############################################\n",
     "# Define Components\n",
     "############################################\n",
+    "class Velocity:\n",
+    "    def __init__(self, vx, vy):\n",
+    "        self.vx = vx\n",
+    "        self.vy = vy\n",
+    "\n",
+    "\n",
+    "class Renderable:\n",
+    "    def __init__(self, image, posx, posy, depth=0):\n",
+    "        self.image = image\n",
+    "        self.depth = depth\n",
+    "        self.x = posx\n",
+    "        self.y = posy\n",
+    "        self.w = image.get_width()\n",
+    "        self.h = image.get_height()\n",
     "\n",
     "\n",
     "############################################\n",
     "# Define Systems\n",
     "############################################\n",
+    "class MovementProcessor(esper.Processor):\n",
+    "    def __init__(self, minx, maxx, miny, maxy):\n",
+    "        super().__init__()\n",
+    "        self.minx = minx\n",
+    "        self.maxx = maxx\n",
+    "        self.miny = miny\n",
+    "        self.maxy = maxy\n",
+    "\n",
+    "    def process(self):\n",
+    "        # Process all entities with both Velocity and Renderable\n",
+    "        for ent, (vel, rend) in self.world.get_components(Velocity, Renderable):\n",
+    "            # Update renderable position by velocity\n",
+    "            rend.x += vel.vx  # type: ignore\n",
+    "            rend.y += vel.vy  # type: ignore\n",
+    "\n",
+    "\n",
+    "class RenderProcessor(esper.Processor):\n",
+    "    def __init__(self, window, clear_color=(1, 0, 0)):\n",
+    "        super().__init__()\n",
+    "        self.window = window\n",
+    "        self.clear_color = clear_color\n",
+    "\n",
+    "    def process(self):\n",
+    "        # Clear screen\n",
+    "        self.window.fill(self.clear_color)\n",
+    "        # Blit all entities with Renderable\n",
+    "        for ent, rend in self.world.get_component(Renderable):\n",
+    "            self.window.blit(rend.image, (rend.x, rend.y))\n",
+    "        pygame.display.flip()\n",
+    "\n",
+    "\n",
+    "############################################\n",
+    "# Event Handle\n",
+    "############################################\n",
+    "def handle_events(func_velocity: Velocity) -> bool:\n",
+    "    frame_events = pygame.event.get()\n",
+    "    if len(frame_events) == 0:\n",
+    "        return True\n",
+    "    for event in frame_events:\n",
+    "        if event.type == pygame.QUIT:\n",
+    "            return False\n",
+    "        elif event.type == pygame.KEYDOWN:\n",
+    "            if event.key == pygame.K_UP:\n",
+    "                func_velocity.vy = -MOVEMENT_SPEED\n",
+    "            if event.key == pygame.K_DOWN:\n",
+    "                func_velocity.vy = MOVEMENT_SPEED\n",
+    "            if event.key == pygame.K_RIGHT:\n",
+    "                func_velocity.vx = MOVEMENT_SPEED\n",
+    "            if event.key == pygame.K_LEFT:\n",
+    "                func_velocity.vx = -MOVEMENT_SPEED\n",
+    "        elif event.type == pygame.KEYUP:\n",
+    "            if event.key in (pygame.K_UP, pygame.K_DOWN):\n",
+    "                func_velocity.vy = 0\n",
+    "            if event.key in (pygame.K_LEFT, pygame.K_RIGHT):\n",
+    "                func_velocity.vx = 0\n",
+    "    return True\n",
     "\n",
     "\n",
     "############################################\n",
@@ -75,17 +138,28 @@
     "    pygame.init()\n",
     "    window = pygame.display.set_mode(RESOLUTION)\n",
     "    clock = pygame.time.Clock()\n",
-    "    pygame.key.set_repeat(1,1)\n",
+    "    pygame.key.set_repeat(1, 1)\n",
     "    # Inite ECS\n",
+    "    world = esper.World()\n",
+    "    player = world.create_entity()\n",
+    "    world.add_component(player, Velocity(vx=0, vy=0))\n",
+    "    world.add_component(\n",
+    "        player, Renderable(image=pygame.image.load(\"redsquare.png\"), posx=100, posy=100)\n",
+    "    )\n",
     "    # Init Systems\n",
+    "    render_processor = RenderProcessor(window=window)\n",
+    "    movement_processor = MovementProcessor(\n",
+    "        minx=0, maxx=RESOLUTION[0], miny=0, maxy=RESOLUTION[1]\n",
+    "    )\n",
+    "    world.add_processor(render_processor)\n",
+    "    world.add_processor(movement_processor)\n",
+    "\n",
     "    running = True\n",
     "    while running:\n",
     "        # Handle events\n",
-    "        for event in pygame.event.get():\n",
-    "            if event.type == pygame.QUIT:\n",
-    "                running = False\n",
-    "\n",
+    "        running = handle_events(world.component_for_entity(player, Velocity))\n",
     "        # Update ECS\n",
+    "        world.process()\n",
     "        # Clock tick\n",
     "        clock.tick(FPS)\n",
     "\n",
@@ -165,6 +239,51 @@
     "\n",
     "By following this roadmap, you'll get a solid understanding of ECS in Python and \n",
     "be ready to create efficient and maintainable real-time applications."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explain the difference between pygame.display.flip() and pygame.display.update()\n",
+    "***\n",
+    "\n",
+    "Both `pygame.display.flip()` and `pygame.display.update()` are used to update  \n",
+    "the display surface in Pygame, but they have slightly different behaviors:\n",
+    "\n",
+    "1. `pygame.display.flip()`: This function updates the entire screen, swapping  \n",
+    "the front and back display buffers. This is called double-buffering, where you  \n",
+    "draw to an off-screen buffer, and once the drawing is complete, you flip the  \n",
+    "buffers to display the new content. It is more suitable for games or  \n",
+    "applications that require frequent updates to the entire screen.\n",
+    "\n",
+    "   Example usage:\n",
+    "\n",
+    "   ```python\n",
+    "   pygame.display.flip()\n",
+    "   ```\n",
+    "\n",
+    "2. `pygame.display.update()`: This function updates only the specified  \n",
+    "portion(s) of the screen. If you provide no arguments or pass an empty list, it  \n",
+    "updates the entire screen, similar to `pygame.display.flip()`. However, if you  \n",
+    "pass a rectangle or a list of rectangles as an argument, only those areas of  \n",
+    "the screen will be updated. This can be more efficient when you only need to  \n",
+    "update specific parts of the screen, as it requires less processing.\n",
+    "\n",
+    "   Example usage:\n",
+    "\n",
+    "   ```python\n",
+    "   pygame.display.update()  # Updates the entire screen\n",
+    "   pygame.display.update(rect)  # Updates a single rectangle\n",
+    "   pygame.display.update([rect1, rect2, rect3])  # Updates multiple rectangles\n",
+    "   ```\n",
+    "\n",
+    "In summary, use `pygame.display.flip()` when you need to update the entire  \n",
+    "screen, usually in applications that require constant screen redraws. Use  \n",
+    "`pygame.display.update()` when you want to update only specific portions of the  \n",
+    "screen, which can provide performance benefits if only small areas need to be  \n",
+    "redrawn."
    ]
   }
  ],
