Updated to draw rect instead of pngs

--- a/pygames/esper/esper_example.ipynb
+++ b/pygames/esper/esper_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -32,18 +32,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- [ASSET GENERATION] --\n",
+    "***"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### -- [EXAMPLE] --\n",
     "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "import esper\n",
     "import pygame\n",
+    "import math\n",
     "\n",
     "FPS = 60\n",
     "RESOLUTION = 640, 480\n",
@@ -60,13 +70,10 @@
     "\n",
     "\n",
     "class Renderable:\n",
-    "    def __init__(self, image, posx, posy, depth=0):\n",
-    "        self.image = image\n",
+    "    def __init__(self, posx, posy, depth=0):\n",
     "        self.depth = depth\n",
     "        self.x = posx\n",
     "        self.y = posy\n",
-    "        self.w = image.get_width()\n",
-    "        self.h = image.get_height()\n",
     "\n",
     "\n",
     "############################################\n",
@@ -99,34 +106,41 @@
     "        self.window.fill(self.clear_color)\n",
     "        # Blit all entities with Renderable\n",
     "        for ent, rend in self.world.get_component(Renderable):\n",
-    "            self.window.blit(rend.image, (rend.x, rend.y))\n",
+    "            pygame.draw.rect(self.window, (255, 255, 0), (rend.x, rend.y, 64, 64), 0)\n",
     "        pygame.display.flip()\n",
     "\n",
     "\n",
     "############################################\n",
     "# Event Handle\n",
     "############################################\n",
-    "def handle_events(func_velocity: Velocity) -> bool:\n",
+    "def handle_events(velocity: Velocity) -> bool:\n",
     "    frame_events = pygame.event.get()\n",
-    "    if len(frame_events) == 0:\n",
+    "    if not frame_events:\n",
     "        return True\n",
     "    for event in frame_events:\n",
     "        if event.type == pygame.QUIT:\n",
     "            return False\n",
     "        elif event.type == pygame.KEYDOWN:\n",
     "            if event.key == pygame.K_UP:\n",
-    "                func_velocity.vy = -MOVEMENT_SPEED\n",
+    "                velocity.vy = -MOVEMENT_SPEED\n",
     "            if event.key == pygame.K_DOWN:\n",
-    "                func_velocity.vy = MOVEMENT_SPEED\n",
+    "                velocity.vy = MOVEMENT_SPEED\n",
     "            if event.key == pygame.K_RIGHT:\n",
-    "                func_velocity.vx = MOVEMENT_SPEED\n",
+    "                velocity.vx = MOVEMENT_SPEED\n",
     "            if event.key == pygame.K_LEFT:\n",
-    "                func_velocity.vx = -MOVEMENT_SPEED\n",
+    "                velocity.vx = -MOVEMENT_SPEED\n",
     "        elif event.type == pygame.KEYUP:\n",
     "            if event.key in (pygame.K_UP, pygame.K_DOWN):\n",
-    "                func_velocity.vy = 0\n",
+    "                velocity.vy = 0\n",
     "            if event.key in (pygame.K_LEFT, pygame.K_RIGHT):\n",
-    "                func_velocity.vx = 0\n",
+    "                velocity.vx = 0\n",
+    "    # normalize velocity vector\n",
+    "    length = math.sqrt(velocity.vx**2 + velocity.vy**2)\n",
+    "    if length > 0:\n",
+    "        velocity.vx /= length\n",
+    "        velocity.vy /= length\n",
+    "        velocity.vx *= MOVEMENT_SPEED\n",
+    "        velocity.vy *= MOVEMENT_SPEED\n",
     "    return True\n",
     "\n",
     "\n",
@@ -143,9 +157,7 @@
     "    world = esper.World()\n",
     "    player = world.create_entity()\n",
     "    world.add_component(player, Velocity(vx=0, vy=0))\n",
-    "    world.add_component(\n",
-    "        player, Renderable(image=pygame.image.load(\"redsquare.png\"), posx=100, posy=100)\n",
-    "    )\n",
+    "    world.add_component(player, Renderable(posx=100, posy=100))\n",
     "    # Init Systems\n",
     "    render_processor = RenderProcessor(window=window)\n",
     "    movement_processor = MovementProcessor(\n",
