rusty guessing game

--- a/rusty_jeep_project/rusty_jupyter.ipynb
+++ b/rusty_jeep_project/rusty_jupyter.ipynb
@@ -2,31 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, world! From Jupyter Notebook Rust Kernel\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "()"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "println!(\"Hello, world! From Jupyter Notebook Rust Kernel\")"
    ]
@@ -34,11 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -55,6 +29,37 @@
     "let a = 13;\n",
     "a"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guess the number!\n",
+      "Please input your guess.\n"
+     ]
+    }
+   ],
+   "source": [
+    "use std::io;\n",
+    "\n",
+    "fn main(){\n",
+    "    println!(\"Guess the number!\");\n",
+    "    println!(\"Please input your guess.\");\n",
+    "    let mut guess = String::new();\n",
+    "    io::stdin()\n",
+    "        .read_line(&mut guess)\n",
+    "        .expect(\"Failed to read line\");\n",
+    "\n",
+    "    println!(\"You guessed: {guess}\")\n",
+    "}\n",
+    "\n",
+    "main()"
+   ]
   }
  ],
  "metadata": {
@@ -67,7 +72,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "Rust",
+   "name": "rust",
    "pygment_lexer": "rust",
    "version": ""
   },
