Walk through of MOVE and Copy -> function scope

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_04_ownership.ipynb
@@ -601,6 +601,160 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Stack Only : Data Copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 5, y = 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let x = 5;\n",
+    "    let y = x;\n",
+    "\n",
+    "    println!(\"x = {}, y = {}\", x, y);   // According to the HEAP rules this should NOT work\n",
+    "                                        // But it does because integers are stored on the STACK\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> But this code seems to contradict what we just learned: we don’t have a call to  \n",
+    "clone, but x is still valid and wasn’t moved into y.\n",
+    "\n",
+    "The reason is that types such as integers that have a known size at compile  \n",
+    "time are stored entirely on the stack, so copies of the actual values are quick  \n",
+    "to make. That means there’s no reason we would want to prevent x from being  \n",
+    "valid after we create the variable y. In other words, there’s no difference  \n",
+    "between deep and shallow copying here, so calling clone wouldn’t do anything  \n",
+    "different from the usual shallow copying, and we can leave it out.  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Copy Trait\n",
+    "\n",
+    "> Rust has a special annotation called the Copy trait that we can place on types  \n",
+    "that are stored on the stack, as integers are  \n",
+    "(we’ll talk more about traits in Chapter 10).  \n",
+    "\n",
+    "If a type implements the Copy trait, variables that use it do not move, but  \n",
+    "rather are trivially copied, making them still valid after assignment to another  \n",
+    "variable.\n",
+    "\n",
+    "> Rust won’t let us annotate a type with **`Copy`** if the type, or any of its parts,  \n",
+    "has implemented the **`Drop`** trait. If the type needs something special to happen  \n",
+    "when the value goes out of scope and we add the Copy annotation to that type,  \n",
+    "we’ll get a compile-time error. To learn about how to add the Copy annotation  \n",
+    "to your type to implement the trait, see “Derivable Traits” in Appendix C.  \n",
+    "\n",
+    "So, what types implement the Copy trait? You can check the documentation for the  \n",
+    "given type to be sure, but as a general rule, any group of simple scalar values  \n",
+    "can implement Copy, and nothing that requires allocation or is some form of  \n",
+    "resource can implement Copy. Here are some of the types that implement Copy:\n",
+    "\n",
+    "@note All the integer types, such as u32.\n",
+    "- The Boolean type, bool, with values true and false.\n",
+    "- All the floating-point types, such as f64.\n",
+    "- The character type, char.\n",
+    "- Tuples, if they only contain types that also implement Copy.  \n",
+    "  For example, (i32, i32) implements Copy, but (i32, String) does not."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ownership and Functions\n",
+    "\n",
+    "The mechanics of passing a value to a function are similar to those when  \n",
+    "assigning a value to a variable. Passing a variable to a function will move or  \n",
+    "copy, just as assignment does. \n",
+    "\n",
+    "Here is an example with some annotations showing where variables go into and out  \n",
+    "of scope:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[fn] takes ownership of Hello\n",
+      "[fn] makes copy of 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let s = String::from(\"Hello\");  // s comes into scope\n",
+    "    takes_ownership(s);             // @note s's value FULLY moves into the function ...\n",
+    "                                    // ... and so is NO LONBER VALID in this scope\n",
+    "\n",
+    "    let x = 5;                      // x comes into scope\n",
+    "    makes_copy(x);                  // x would move into the function, but it's COPIED\n",
+    "                                    // because i32 has a Copy (trait), so it's value\n",
+    "                                    // remains at this scope and AVAILABLE for use\n",
+    "}   // After this closure :\n",
+    "    // - x goes out of scope\n",
+    "    // - then s ... but because it's VALUE was already moved ... \n",
+    "    // @note going out of scope is IDEMPOTENT\n",
+    "\n",
+    "fn takes_ownership(some_string: String){ // some_string comes into scope\n",
+    "    println!(\"[fn] takes ownership of {}\", some_string);\n",
+    "}   // @note Here some_string goes out of scope and 'drop' is called \n",
+    "    // the backing memory is freed!\n",
+    "\n",
+    "fn makes_copy(some_integer: i32){   // some_integer comes into scope\n",
+    "    println!(\"[fn] makes copy of {}\", some_integer);\n",
+    "}   // Here some_integer goes out of scope, but because i32 has a Copy Trait\n",
+    "    // @note Nothing special happens, this closure is IDEMPOTENT\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Mutable References\n",
     "---"
    ]
